2008-05-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* DisposableFieldsShouldBeDisposedRule.cs: Simplify finding 
	Dispose	methods a bit (self-test).

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* UsingCloneWithoutImplementingICloneableRule.cs: Change rule
	not to warn when Clone return something else than System.Object 
	since implementing ICloneable won't be enough anyway (and changing
	to System.Object just add unneeded casts).

2008-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingFieldToNullableRule.cs: New. Rule to promote
	the use of nullable fields inside types [Cedric Vivier].
	* Makefile.am: Add rule and test to the build.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingMethodToPropertyRule.cs: Add checks for 
	methods starting with Has*. Patch from Cedric Vivier.

2008-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* OperatorEqualsShouldBeOverloadedRule.cs: Fix Problem/Solution
	attributes to match the rule. Found by Ben Motmans.

2008-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingMethodToPropertyRule.cs: Don't apply the rule
	to overrides. Don't check Set* methods but report them if we find an
	appropriate Get* method (single defect).

2008-04-09  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementEqualsAndGetHashCodeInPairRule.cs: Fix message (spotted
	by Andy Hume).

2008-04-08  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* TypesWithDisposableFieldsShouldBeDisposableRule.cs: Fixed a typo.

2008-04-03  Daniel Abramov <ex@vingrad.ru>

	* ImplementGenericCollectionInterfacesRule.cs: New rule to check
	if the class implementing IEnumerable implements IEnumerable<T>
	too (only for .NET 2.0+).
	* Gendarme.Rules.Design.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and test to the build.

2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementIComparableCorreclyRule.cs: New. Rule to check that 